Extended transformer to unmarshall the object based on version. Now the problem is to figure out why NeighbourDiscoverer asks for new subscriptions every time